@@ -1,0 +1,4 @@
+AuthType	Basic
+AuthName	"restricted directory"
+AuthUserFile	/***REMOVED***//webpasswords-development
+require	valid-user
